@@ -167,13 +167,6 @@ class ObjectManager:
         """Return the page number"""
         return self._pageNumber
 
-    def createTable(self, tableName: str):
-        """Create a table"""
-        self._tableName = tableName
-        table = Table(tableName)
-        self._dao.fillTable(table, self)
-        return table
-
     def hasColumnId(self, tableName):
         table = self.getTable(tableName)
         return table.hasColumnId()
@@ -251,13 +244,14 @@ class ObjectManager:
         for i, rowId in enumerate(selectedRange):
             table.getSelection().addRowSelected(rowId, remove=remove)
 
+    def getTables(self):
+        """Return the tables. Tables at least should have the name. Optionally the alias. Table definition  could come later"""
+        if not self._tables:
+            self._tables = self._dao.getTables()
+        return self._tables
     def getTableNames(self):
-        """Return the table names"""
-        return self._dao.getTableNames()
+        return [table.getAlias() for table in self.getTables().values()]
 
-    def getTableAliases(self):
-        """Return the tables aliases"""
-        return self._dao.getTableAliases()
 
     def getTableRowCount(self, tableName: str):
         return self._dao.getTableRowCount(tableName)
@@ -278,15 +272,27 @@ class ObjectManager:
     def getTable(self, tableName: str):
         """Returns a table if it is stored, otherwise a new table is
            created. """
-        if tableName not in self._tables:
-            table = self.createTable(tableName)
-            self.setColumnsIndex(table)
-            self._tables[tableName] = table
+
+        table = self._tables.get(tableName, None)
+        if table is not None:
+
+            if table.configured():
+                return table
+            else:
+                self._dao.fillTable(table, self)
+                self.setColumnsIndex(table)
+                return table
         else:
-            table = self._tables[tableName]
+            raise Exception("Table %s not present in the list of tables." % tableName)
 
-        return table
+    def getTableFromAlias(self, alias):
+        """ Returns the table that matches the alias or raises an exception"""
 
+        for table in self.getTables().values():
+            if alias == table.getAlias():
+                return self.getTable(table.getName())
+
+        raise Exception("Table alias %s does not match any available table." % alias)
     def sort(self, tableName, column, reverse=True):
         """Store the table sort preferences"""
         table = self.getTable(tableName)
